Fix player profile data and add config option to disable star badges